--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,16 @@ html {
   font-size: 20px;
   text-rendering: optimizeLegibility; }
 
+.clearfix {
+  zoom: 1; }
+
+.clearfix:after {
+  content: '.';
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden; }
+
 /* --------------------------------- */
 /* Reusable Components*/
 /* --------------------------------- */
@@ -21,16 +31,61 @@ html {
   max-width: 1140px;
   margin: 0 auto; }
 
+section {
+  padding: 90px 0; }
+
+.box {
+  padding: 1%; }
+
 /* -----------Heading---------- */
+h1, h2, h3 {
+  font-weight: 300;
+  text-transform: uppercase; }
+
 h1 {
   margin-top: 0;
   margin-bottom: 20px;
   color: #fff;
   font-size: 240%;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  word-spacing: 3px; }
+  word-spacing: 3px;
+  letter-spacing: 1px; }
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-top: 30px;
+  letter-spacing: 1px; }
+
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px; }
+
+h2:after {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  width: 100px;
+  margin: 0 auto;
+  margin-bottom: 30px; }
+
+/* -----------Paragraphs---------- */
+.long-copy {
+  line-height: 145%;
+  widows: 70%;
+  margin-left: 15%; }
+
+.box p {
+  font-size: 90%;
+  line-height: 145%; }
+
+/* -----------Icon---------- */
+.icon-big {
+  font-size: 350%;
+  display: block;
+  color: #e67e22;
+  margin-bottom: 10px; }
 
 /* -----------Buttons---------- */
 .btn:link,
@@ -109,5 +164,81 @@ header {
       transition: all 0.5s; }
     .main-nav li a:hover, .main-nav li a:active {
       border-bottom: 2px solid #e67e22; }
+
+/* --------------------------------- */
+/* Features*/
+/* --------------------------------- */
+.section-features .long-copy {
+  margin-top: 30px; }
+
+/* --------------------------------- */
+/* Meals*/
+/* --------------------------------- */
+.section-meals {
+  padding: 0; }
+
+.meals-showcase {
+  list-style: none;
+  width: 100%; }
+  .meals-showcase li {
+    display: block;
+    float: left;
+    width: 25%; }
+
+.meal-photo {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  background-color: #000; }
+  .meal-photo img {
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: all 0.5s; }
+  .meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.03); }
+
+/* --------------------------------- */
+/* How It Work*/
+/* --------------------------------- */
+.section-steps {
+  background-color: #f4f4f4; }
+
+.steps-box:first-child {
+  text-align: right;
+  padding-right: 3%;
+  margin-top: 30px; }
+
+.steps-box:last-child {
+  padding-right: 3%;
+  margin-top: 70px; }
+
+.app-screen {
+  width: 40%; }
+
+.works-step:last-of-type {
+  margin-bottom: 80px; }
+
+.works-step {
+  margin-bottom: 50px; }
+  .works-step div {
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    display: inline-block;
+    border-radius: 50%;
+    height: 55px;
+    width: 55px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px; }
+
+.btn-app {
+  height: 50px;
+  width: auto;
+  margin-right: 10px; }
 
 /*# sourceMappingURL=style.css.map */
