--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -106,6 +106,35 @@ h2:after {
     margin-bottom: 10px;
 }
 
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: $orange;
+    font-size: 120%;
+    margin-right: 10px;
+    
+    /*secrets to align text and icons*/
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top: -5px;
+}
+
+/* -----------Links---------- */
+
+a:link, a:active {
+    color: $orange;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid $orange;
+    transition: all 0.2s;
+}
+
+a:hover, a:active {
+    color: #555;
+    border-bottom: 1px solid transparent;
+}
+
 /* -----------Buttons---------- */
 .btn:link,
 .btn:visited {
@@ -290,8 +319,33 @@ header {
     }
 }
 
-.btn-app {
-    height: 50px;
-    width: auto;
-    margin-right: 10px;
+.btn-app:link, 
+.btn-app:visited {
+    border: 0;
 }
+
+.btn-app {
+    img {
+        height: 50px;
+        width: auto;
+        margin-right: 10px;
+    } 
+}
+
+
+/* --------------------------------- */
+/* Cities*/
+/* --------------------------------- */
+
+.box {
+    img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 15px;
+    }
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
