--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -190,6 +190,7 @@ header {
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .hero-text-box {
@@ -349,3 +350,104 @@ header {
     margin-bottom: 5px;
 }
 
+
+/* --------------------------------- */
+/* Testimonials*/
+/* --------------------------------- */
+
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    background-position: 50% 50%;
+    color: #fff;
+    background-attachment: fixed;
+    
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -3px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+    img {
+        height: 50px;
+        border-radius: 50%;
+        margin-right: 10px;
+        vertical-align: middle;
+    }
+}
+
+/* --------------------------------- */
+/* Sign Up*/
+/* --------------------------------- */
+
+.section-plans {
+    background-color: #f4f4f4;
+}
+
+.plan-box {
+    background-color: #fff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+    box-shadow: 0 2px 2px #efefef;
+    div {
+        padding: 15px;
+        border-bottom: 1px solid #e8e8e8;
+    }
+    div:first-child {
+        background-color: #fcfcfc;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    div:last-child {
+        text-align: center;
+        border: 0;
+    }
+    ul {
+        list-style: none;
+        li {
+            padding: 5px 0;
+        }
+    }
+}
+
+.plan-price {
+    font-size: 300%;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: $orange;
+    span {
+        font-size: 30%;
+        font-weight: 300;
+    }
+}
+
+.plan-price-meal {
+    font-size: 80%;
+}
+
+/* --------------------------------- */
+/* Contact*/
+/* --------------------------------- */
+
+
+/* --------------------------------- */
+/* Footer*/
+/* --------------------------------- */
