--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,7 +113,8 @@ a:hover, a:active {
 
 /* -----------Buttons---------- */
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
@@ -122,7 +123,8 @@ a:hover, a:active {
   transition: all 0.5s; }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
   background-color: #e67e22;
   border: 1px solid #e67e22;
   color: #fff;
@@ -134,7 +136,9 @@ a:hover, a:active {
   color: #e67e22; }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
   background-color: #cf6d17;
   border: 1px solid #cf6d17;
   color: #fff; }
@@ -343,12 +347,12 @@ cite {
     .plan-box ul li {
       padding: 5px 0; }
 
-.plan-price {
+f {
   font-size: 300%;
   margin-bottom: 10px;
   font-weight: 100;
   color: #e67e22; }
-  .plan-price span {
+  f span {
     font-size: 30%;
     font-weight: 300; }
 
@@ -358,8 +362,86 @@ cite {
 /* --------------------------------- */
 /* Contact*/
 /* --------------------------------- */
+.contact-form {
+  width: 60%;
+  margin: 0 auto; }
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc; }
+
+textarea {
+  height: 100px; }
+
+input[type=checkbox] {
+  margin: 10px 5px 10px 0; }
+
+*:focus {
+  outline: none; }
+
 /* --------------------------------- */
 /* Footer*/
 /* --------------------------------- */
+footer {
+  background-color: #333;
+  padding: 60px;
+  font-size: 80% p;
+    font-size-color: #888;
+    font-size-text-align: center;
+    font-size-margin-top: 30px; }
+
+.footer-nav {
+  list-style: none;
+  float: left; }
+  .footer-nav li {
+    display: inline-block;
+    margin-right: 20px; }
+    .footer-nav li a:link, .footer-nav li a:visited {
+      text-decoration: none;
+      border: 0;
+      color: #888;
+      transition: all 0.2s; }
+    .footer-nav li a:hover, .footer-nav li a:active {
+      color: #ddd; }
+  .footer-nav li:last-child {
+    margin-right: 0; }
+
+.social-links {
+  list-style: none;
+  float: right; }
+  .social-links li {
+    display: inline-block;
+    margin-right: 20px; }
+    .social-links li a:link, .social-links li a:visited {
+      text-decoration: none;
+      border: 0;
+      color: #888;
+      transition: all 0.2s;
+      font-size: 160%; }
+  .social-links li:last-child {
+    margin-right: 0; }
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+  transition: all 0.2s; }
+
+.ion-social-facebook:hover {
+  color: #3b5998; }
+
+.ion-social-twitter:hover {
+  color: #00aced; }
+
+.ion-social-googleplus:hover {
+  color: #dd4b39; }
+
+.ion-social-instagram:hover {
+  color: #517fa4; }
 
 /*# sourceMappingURL=style.css.map */
