--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -137,7 +137,8 @@ a:hover, a:active {
 
 /* -----------Buttons---------- */
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -148,7 +149,8 @@ a:hover, a:active {
 
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit]{
     background-color: $orange;
     border: 1px solid $orange;
     color: #fff;
@@ -162,7 +164,9 @@ a:hover, a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: $orange-link;
     border: 1px solid $orange-link;
     color: #fff;
@@ -428,7 +432,7 @@ cite {
     }
 }
 
-.plan-price {
+f {
     font-size: 300%;
     margin-bottom: 10px;
     font-weight: 100;
@@ -447,7 +451,101 @@ cite {
 /* Contact*/
 /* --------------------------------- */
 
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {outline: none;}
 
 /* --------------------------------- */
 /* Footer*/
 /* --------------------------------- */
+
+footer {
+   background-color: #333; 
+    padding: 60px;
+    font-size: 80%
+    p {
+        color: #888;
+        text-align: center;
+        margin-top: 30px;
+    }
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+    li {
+        display: inline-block;
+        margin-right: 20px;
+        a:link, a:visited {
+            text-decoration: none;
+            border: 0;
+            color: #888;
+            transition: all 0.2s;
+        }
+        a:hover, a:active {
+            color: #ddd;
+        }
+    }
+    li:last-child {
+        margin-right: 0;
+    }
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+    li {
+        display: inline-block;
+        margin-right: 20px;
+        a:link, a:visited {
+            text-decoration: none;
+            border: 0;
+            color: #888;
+            transition: all 0.2s;
+            font-size: 160%;
+        }
+    }
+     li:last-child {
+        margin-right: 0;
+    }
+}
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+    transition: all 0.2s;
+}
+.ion-social-facebook:hover {
+    color: #3b5998;
+}
+.ion-social-twitter:hover {
+    color: #00aced;
+}
+.ion-social-googleplus:hover {
+    color: #dd4b39;
+}
+.ion-social-instagram:hover {
+    color: #517fa4;
+}
