--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,13 +6,15 @@
   padding: 0;
   box-sizing: border-box; }
 
-html {
+html,
+body {
   background-color: #fff;
   color: #555;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
   font-size: 20px;
-  text-rendering: optimizeLegibility; }
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden; }
 
 .clearfix {
   zoom: 1; }
@@ -105,6 +107,10 @@ a:link, a:active {
   text-decoration: none;
   padding-bottom: 1px;
   border-bottom: 1px solid #e67e22;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
   transition: all 0.2s; }
 
 a:hover, a:active {
@@ -119,8 +125,16 @@ input[type=submit] {
   padding: 10px 30px;
   font-weight: 300;
   text-decoration: none;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  -ms-border-radius: 200px;
+  -o-border-radius: 200px;
   border-radius: 200px;
-  transition: all 0.5s; }
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s; }
 
 .btn-full:link,
 .btn-full:visited,
@@ -190,6 +204,10 @@ header {
       text-transform: uppercase;
       font-size: 90%;
       border-bottom: 2px solid transparent;
+      -webkit-transition: all 0.5s;
+      -moz-transition: all 0.5s;
+      -ms-transition: all 0.5s;
+      -o-transition: all 0.5s;
       transition: all 0.5s; }
     .main-nav li a:hover, .main-nav li a:active {
       border-bottom: 2px solid #e67e22; }
@@ -224,6 +242,10 @@ header {
     width: 100%;
     height: auto;
     transform: scale(1.15);
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
     transition: all 0.5s; }
   .meal-photo img:hover {
     opacity: 1;
@@ -256,6 +278,10 @@ header {
     color: #e67e22;
     border: 2px solid #e67e22;
     display: inline-block;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
     border-radius: 50%;
     height: 55px;
     width: 55px;
@@ -316,6 +342,10 @@ cite {
   display: block; }
   cite img {
     height: 50px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
     border-radius: 50%;
     margin-right: 10px;
     vertical-align: middle; }
@@ -328,6 +358,10 @@ cite {
 
 .plan-box {
   background-color: #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
   border-radius: 5px;
   width: 90%;
   margin-left: 5%;
@@ -372,6 +406,10 @@ select,
 textarea {
   width: 100%;
   padding: 7px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
   border-radius: 3px;
   border: 1px solid #ccc; }
 
@@ -405,6 +443,10 @@ footer {
       text-decoration: none;
       border: 0;
       color: #888;
+      -webkit-transition: all 0.2s;
+      -moz-transition: all 0.2s;
+      -ms-transition: all 0.2s;
+      -o-transition: all 0.2s;
       transition: all 0.2s; }
     .footer-nav li a:hover, .footer-nav li a:active {
       color: #ddd; }
@@ -421,6 +463,10 @@ footer {
       text-decoration: none;
       border: 0;
       color: #888;
+      -webkit-transition: all 0.2s;
+      -moz-transition: all 0.2s;
+      -ms-transition: all 0.2s;
+      -o-transition: all 0.2s;
       transition: all 0.2s;
       font-size: 160%; }
   .social-links li:last-child {
@@ -430,6 +476,10 @@ footer {
 .ion-social-twitter,
 .ion-social-googleplus,
 .ion-social-instagram {
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
   transition: all 0.2s; }
 
 .ion-social-facebook:hover {
