--- a/src/css/queries.css
+++ b/src/css/queries.css
@@ -16,7 +16,7 @@
         font-size: 18px;
     }
     
-    section { padding: 10px 0; }
+    section { padding: 60px 0; }
     
     .long-copy {
         width: 80%;
@@ -26,7 +26,9 @@
     .steps-box:last-child { margin-top: 10px; }
     .works-step { margin-bottom: 40px; }
     .works-step:last-of-type { margin-bottom: 60px; }
+    
     .app-screen { width: 50%; }
+    
     .icon-small {
         width: 17px;
         margin-right: 5px;
@@ -53,6 +55,35 @@
     }
     
     .main-nav { display:  none; }
+    .main-nav { 
+        float: left; 
+        margin-top: 30px;
+        margin-left: 25px;
+    }
+    .main-nav li{ display: block }
+    
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 100%;
+    }
+    
+
+    .sticky .main-nav { margin-top: 10px; }
+        
+    .sticky .main-nav li a:link, 
+    .sticky .main-nav li a:visited {
+        padding: 10px 0;
+    }
+    
+    .sticky .mobile-nav-icon { margin-top: 10px; }
+    .sticky .mobile-nav-icon i { color: #555; }
+
+    .mobile-nav-icon {
+        display: inline-block;
+    }
     
     h1 { font-size: 180%; }
     h2 { font-size: 150%; }
@@ -72,7 +103,7 @@
         font-size: 120%;
         margin-right: 15px;
     }
-    .works-step { margin-bottom: 20px; }
+    .works-step { margin-bottom: 30px; }
     .works-step:last-of-type { margin-bottom: 20px; }
 }
 
