--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,7 +34,7 @@ body {
   margin: 0 auto; }
 
 section {
-  padding: 90px 0; }
+  padding: 80px 0; }
 
 .box {
   padding: 1%; }
@@ -49,14 +49,14 @@ h1 {
   margin-bottom: 20px;
   color: #fff;
   font-size: 240%;
-  word-spacing: 3px;
+  word-spacing: 4px;
   letter-spacing: 1px; }
 
 h2 {
   font-size: 180%;
   word-spacing: 2px;
   text-align: center;
-  margin-top: 30px;
+  margin-bottom: 30px;
   letter-spacing: 1px; }
 
 h3 {
@@ -64,13 +64,13 @@ h3 {
   margin-bottom: 15px; }
 
 h2:after {
-  content: "";
+  content: " ";
   display: block;
   height: 2px;
   background-color: #e67e22;
   width: 100px;
   margin: 0 auto;
-  margin-bottom: 30px; }
+  margin-top: 30px; }
 
 /* -----------Paragraphs---------- */
 .long-copy {
@@ -102,7 +102,7 @@ h2:after {
   margin-top: -5px; }
 
 /* -----------Links---------- */
-a:link, a:active {
+a:link, a:visited {
   color: #e67e22;
   text-decoration: none;
   padding-bottom: 1px;
@@ -153,9 +153,7 @@ input[type=submit] {
 .btn:active,
 input[type=submit]:hover,
 input[type=submit]:active {
-  background-color: #cf6d17;
-  border: 1px solid #cf6d17;
-  color: #fff; }
+  background-color: #cf6d17; }
 
 .btn-full:hover,
 .btn-full:active {
@@ -173,8 +171,7 @@ header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
   height: 100vh;
   background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
+  background-position: center;
   background-attachment: fixed; }
 
 .hero-text-box {
@@ -182,6 +179,8 @@ header {
   width: 1140px;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
 
 .logo {
@@ -190,6 +189,14 @@ header {
   float: left;
   margin-top: 20px; }
 
+.logo-black {
+  height: 50px;
+  width: auto;
+  float: left;
+  margin: 5px 0;
+  display: none; }
+
+/* Main nav */
 .main-nav {
   float: right;
   list-style: none;
@@ -211,6 +218,40 @@ header {
       transition: all 0.5s; }
     .main-nav li a:hover, .main-nav li a:active {
       border-bottom: 2px solid #e67e22; }
+
+/* Mobile nav */
+.mobile-nav-icon {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+  border: 0; }
+  .mobile-nav-icon i {
+    font-size: 200%;
+    color: #fff; }
+
+/* Sticky nav */
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  -webkit-box-shadow: 0 2px 2px #efefef;
+  -moz-box-shadow: 0 2px 2px #efefef;
+  -ms-box-shadow: 0 2px 2px #efefef;
+  -o-box-shadow: 0 2px 2px #efefef;
+  box-shadow: 0 2px 2px #efefef;
+  z-index: 999; }
+  .sticky .main-nav {
+    margin-top: 18px; }
+    .sticky .main-nav li a:link, .sticky .main-nav li a:visited {
+      padding: 16px 0;
+      color: #555; }
+  .sticky .logo-black {
+    display: block; }
+  .sticky .logo {
+    display: none; }
 
 /* --------------------------------- */
 /* Features*/
@@ -241,6 +282,8 @@ header {
     opacity: 0.7;
     width: 100%;
     height: auto;
+    -webkit-transform: scale(1.15);
+    -ms-transform: scale(1.15);
     transform: scale(1.15);
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -249,6 +292,8 @@ header {
     transition: all 0.5s; }
   .meal-photo img:hover {
     opacity: 1;
+    -webkit-transform: scale(1.03);
+    -ms-transform: scale(1.03);
     transform: scale(1.03); }
 
 /* --------------------------------- */
@@ -257,12 +302,15 @@ header {
 .section-steps {
   background-color: #f4f4f4; }
 
-.steps-box:first-child {
-  text-align: right;
-  padding-right: 3%;
+.steps-box {
   margin-top: 30px; }
 
+.steps-box:first-child {
+  text-align: right;
+  padding-right: 3%; }
+
 .steps-box:last-child {
+  text-align: left;
   padding-right: 3%;
   margin-top: 70px; }
 
@@ -283,8 +331,8 @@ header {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
-    height: 55px;
-    width: 55px;
+    height: 54px;
+    width: 54px;
     text-align: center;
     padding: 5px;
     float: left;
@@ -334,7 +382,7 @@ blockquote:before {
   display: block;
   position: absolute;
   top: -5px;
-  left: -3px; }
+  left: -5px; }
 
 cite {
   font-size: 90%;
@@ -381,12 +429,12 @@ cite {
     .plan-box ul li {
       padding: 5px 0; }
 
-f {
+.plan-price {
   font-size: 300%;
   margin-bottom: 10px;
   font-weight: 100;
   color: #e67e22; }
-  f span {
+  .plan-price span {
     font-size: 30%;
     font-weight: 300; }
 
@@ -427,11 +475,12 @@ input[type=checkbox] {
 /* --------------------------------- */
 footer {
   background-color: #333;
-  padding: 60px;
-  font-size: 80% p;
-    font-size-color: #888;
-    font-size-text-align: center;
-    font-size-margin-top: 30px; }
+  padding: 50px;
+  font-size: 80%; }
+  footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 30px; }
 
 .footer-nav {
   list-style: none;
