--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,14 @@ $orange-link: #cf6d17;
           border-radius: $radius;
 }
 
+@mixin box-shadow($shadow) {
+  -webkit-box-shadow: $shadow;
+     -moz-box-shadow: $shadow;
+      -ms-box-shadow: $shadow;
+       -o-box-shadow: $shadow;
+          box-shadow: $shadow;
+}
+
 /* --------------------------------- */
 /* Basic Setup*/
 /* --------------------------------- */
@@ -56,7 +64,7 @@ body {
 }
 
 section {
-    padding: 90px 0;
+    padding: 80px 0;
     
 }
 
@@ -76,7 +84,7 @@ h1 {
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    word-spacing: 3px;
+    word-spacing: 4px;
     letter-spacing: 1px;
 }
 
@@ -84,7 +92,7 @@ h2 {
     font-size: 180%;
     word-spacing: 2px;
     text-align: center;
-    margin-top: 30px;
+    margin-bottom: 30px;
     letter-spacing: 1px;
 }
 
@@ -95,15 +103,14 @@ h3 {
 }
 
 h2:after {
-    content: "";
+    content: " ";
     display: block;
     height: 2px;
     background-color: $orange;
     width: 100px;
     margin: 0 auto;
-    margin-bottom: 30px;
+    margin-top: 30px;
 }
-
 /* -----------Paragraphs---------- */
 .long-copy {
     line-height: 145%;
@@ -141,7 +148,7 @@ h2:after {
 
 /* -----------Links---------- */
 
-a:link, a:active {
+a:link, a:visited {
     color: $orange;
     text-decoration: none;
     padding-bottom: 1px;
@@ -187,8 +194,8 @@ input[type=submit]{
 input[type=submit]:hover,
 input[type=submit]:active {
     background-color: $orange-link;
-    border: 1px solid $orange-link;
-    color: #fff;
+//    border: 1px solid $orange-link;
+//    color: #fff;
 }
 
 .btn-full:hover,
@@ -211,8 +218,7 @@ header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     height: 100vh;
     background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
+    background-position: center;
     background-attachment: fixed;
 }
 
@@ -221,6 +227,8 @@ header {
     width: 1140px;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%,-50%);
 }
 
@@ -230,6 +238,16 @@ header {
     float: left;
     margin-top: 20px;
 }
+
+.logo-black { 
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+    display: none;
+}
+
+/* Main nav */
 
 .main-nav {
     float: right;
@@ -251,6 +269,46 @@ header {
         a:hover, a:active {
             border-bottom: 2px solid $orange;
         }
+    }
+}
+
+/* Mobile nav */
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+    border: 0;
+    i {
+        font-size: 200%;
+        color: #fff;
+    }
+}
+
+/* Sticky nav */
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    @include  box-shadow(0 2px 2px #efefef);
+    z-index: 999;
+    .main-nav {
+        margin-top: 18px;
+        li {
+            a:link, a:visited {
+                padding: 16px 0;
+                color: #555;
+            }
+        }
+    }
+    .logo-black { 
+        display: block; 
+    }
+    .logo {
+        display: none;
     }
 }
 
@@ -290,11 +348,15 @@ header {
         opacity: 0.7;
         width: 100%;
         height: auto;
+        -webkit-transform: scale(1.15);
+        -ms-transform: scale(1.15);
         transform: scale(1.15);
         @include transition(all 0.5s);
     }
     img:hover {
         opacity: 1;
+        -webkit-transform: scale(1.03);
+        -ms-transform: scale(1.03);
         transform: scale(1.03);
     }
 }
@@ -306,14 +368,16 @@ header {
 .section-steps {
     background-color: #f4f4f4;
 }
-
+.steps-box {
+    margin-top: 30px;
+}
 .steps-box:first-child {
     text-align: right;
     padding-right: 3%;
-    margin-top: 30px;
 }
 
 .steps-box:last-child {
+    text-align: left;
     padding-right: 3%;
     margin-top: 70px;
 }
@@ -333,8 +397,8 @@ header {
         border: 2px solid $orange;
         display: inline-block;
         @include border-radius(50%);
-        height: 55px;
-        width: 55px;
+        height: 54px;
+        width: 54px;
         text-align: center;
         padding: 5px;
         float: left;
@@ -401,7 +465,7 @@ blockquote:before {
     display: block;
     position: absolute;
     top: -5px;
-    left: -3px;
+    left: -5px;
 }
 
 cite {
@@ -451,7 +515,7 @@ cite {
     }
 }
 
-f {
+.plan-price {
     font-size: 300%;
     margin-bottom: 10px;
     font-weight: 100;
@@ -501,8 +565,8 @@ input[type=checkbox] {
 
 footer {
    background-color: #333; 
-    padding: 60px;
-    font-size: 80%
+    padding: 50px;
+    font-size: 80%;
     p {
         color: #888;
         text-align: center;
